# energy_analysis_toolbox

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  TODO  clean.sh  generate_doc.sh  pyproject.toml  run_tests.sh  setup.py  utils.sh
.github/workflows/: pypi.yml  test.yml
.gitlab/: Code-Quality.gitlab-ci.yml
.gitlab/issue_templates/: anomaly.md  doc_improvement.md  doc_outdated.md  enhancement.md  release.md
.gitlab/merge_request_templates/: doc_MR.md  feature_MR.md
LICENSES/: PATSY_LICENSE  SCIPY_LICENSE
doc/: __init__.py  conf.py  index.rst
doc/developer_guide/: index.rst
doc/getting_started/: index.rst
doc/sources/: energy_analysis_toolbox.constants.rst  energy_analysis_toolbox.energy.resample.rst  energy_analysis_toolbox.energy.rst  energy_analysis_toolbox.errors.rst  energy_analysis_toolbox.keywords.rst  energy_analysis_toolbox.pandas.rst  energy_analysis_toolbox.power.basics.rst  energy_analysis_toolbox.power.overconsumption.rst  energy_analysis_toolbox.power.resample.rst  energy_analysis_toolbox.power.rst  energy_analysis_toolbox.synthetic.rst  energy_analysis_toolbox.synthetic.thermosensitive_consumption.rst  energy_analysis_toolbox.tests.fake.timeseries.rst  energy_analysis_toolbox.tests.rst  energy_analysis_toolbox.tests.test_exists.rst  energy_analysis_toolbox.tests.test_power_basics.rst  energy_analysis_toolbox.tests.test_power_overconsumption_find.rst  energy_analysis_toolbox.tests.test_power_overconsumption_select.rst  energy_analysis_toolbox.tests.test_power_overconsumption_transform.rst  energy_analysis_toolbox.tests.test_synthetic.rst  energy_analysis_toolbox.tests.test_thermosensitivity.rst  energy_analysis_toolbox.tests.test_timeseries_create_from_intervals.rst  energy_analysis_toolbox.tests.test_timeseries_extract_features_basics.rst  energy_analysis_toolbox.tests.test_timeseries_resample_conservative.rst  energy_analysis_toolbox.tests.test_timeseries_resample_interpolate.rst  energy_analysis_toolbox.tests.tests_load_profile.check.rst  energy_analysis_toolbox.tests.tests_load_profile.fake_data.rst  energy_analysis_toolbox.tests.tests_load_profile.rst  energy_analysis_toolbox.tests.tests_load_profile.test_exists.rst  energy_analysis_toolbox.tests.tests_load_profile.test_filters_categories.rst  energy_analysis_toolbox.tests.tests_load_profile.test_filters_weekdays.rst  energy_analysis_toolbox.tests.tests_load_profile.test_hybrid.rst  energy_analysis_toolbox.tests.tests_load_profile.test_mean_profile.rst  energy_analysis_toolbox.tests.tests_load_profile.test_relative.rst  energy_analysis_toolbox.tests.tests_load_profile.test_relative_std.rst  energy_analysis_toolbox.tests.tests_load_profile.test_rolling_profile.rst  energy_analysis_toolbox.thermosensitivity.daily_analysis.rst  energy_analysis_toolbox.thermosensitivity.rst  energy_analysis_toolbox.thermosensitivity.thermosensitivity.rst  energy_analysis_toolbox.timeseries.create.from_intervals.rst  (+92 more)
doc/user_guide/: Resampling_time_series.ipynb  index.rst  thermosensitivity_real.ipynb  thermosensitivity_synthetic.ipynb  using_the_accessor.ipynb
doc/whatsnew/: index.rst  v0.1.rst
energy_analysis_toolbox/: __init__.py  keywords.py  pandas.py
energy_analysis_toolbox/energy/: __init__.py  resample.py
energy_analysis_toolbox/errors/: __init__.py  invalid_timeseries.py  resampling.py
energy_analysis_toolbox/power/: __init__.py  basics.py  resample.py
energy_analysis_toolbox/synthetic/: thermosensitive_consumption.py
energy_analysis_toolbox/tests/: main.py  test_pandas.py  test_power_basics.py  test_power_overconsumption_find.py  test_power_overconsumption_select.py  test_power_overconsumption_transform.py  test_synthetic.py  test_thermosensitivity.py  test_timeseries_extract_features_basics.py  test_timeseries_resample_conservative.py  test_timeseries_resample_index_transformation.py  test_timeseries_resample_interpolate.py  test_weather_degree_days.py
energy_analysis_toolbox/thermosensitivity/: __init__.py  daily_analysis.py  thermosensitivity.py
energy_analysis_toolbox/timeseries/: __init__.py
energy_analysis_toolbox/weather/: degree_days.py
energy_toolbox/: __init__.py  constants.py  keywords.py  pandas.py
energy_toolbox/energy/: resample.py
energy_toolbox/errors/: __init__.py  base.py  invalid_timeseries.py  invalid_timeseries_errors.py  resampling.py  resampling_errors.py
energy_toolbox/power/: __init__.py  basics.py  resample.py
energy_toolbox/synthetic/: __init__.py  thermosensitive_consumption.py
energy_toolbox/tests/: main.py  test_energy_resample.py  test_exists.py  test_pandas.py  test_power_basics.py  test_power_overconsumption_find.py  test_power_overconsumption_select.py  test_power_overconsumption_transform.py  test_power_resample.py  test_synthetic.py  test_thermosensitivity.py  test_timeseries_create_from_intervals.py  test_timeseries_extract_features_basics.py  test_timeseries_resample_conservative.py  test_timeseries_resample_facade.py  test_timeseries_resample_index_transformation.py  test_timeseries_resample_interpolate.py  test_weather_degree_days.py
energy_toolbox/thermosensitivity/: __init__.py  daily_analysis.py  thermosensitivity.py
energy_toolbox/weather/: degree_days.py
watt_df/: __init__.py  pandas.py
watt_df/energy/: resample.py
watt_df/errors/: base.py
watt_df/power/: resample.py
watt_df/tests/: main.py  test_energy_resample.py  test_pandas.py  test_thermosensitivity.py  test_timeseries_resample_conservative.py  test_timeseries_resample_facade.py  test_weather_degree_days.py
watt_df/thermosensitivity/: thermosensitivity.py
watt_df/weather/: degree_days.py
wattdf/: __init__.py  base.py  pandas.py
wattdf/energy/: resample.py
wattdf/power/: basics.py  resample.py
wattdf/tests/: main.py  test_pandas.py  test_power_resample.py  test_thermosensitivity.py  test_timeseries_create_from_intervals.py  test_timeseries_resample_facade.py  test_weather_degree_days.py
(+93 files in other folders)
