[build-system]
requires = [
    "setuptools>=61.0.0",
]

[project]
name = "energy_analysis_toolbox"
description = "A set of tools to manipulate and transform power, energy, and related timeseries data."
authors = [{name="energy_analysis_toolbox contributors",email="research@ecoco2.com"},]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    "pandas>=2.1.0,<3",
    "numpy",
    "scipy>=1.7.1",
    "statsmodels>=0.13",
]
dynamic = [
    "version",
]

[project.urls]
homepage = 'https://github.com/Eco-CO2/energy_analysis_toolbox/issues'
documentation = 'https://readthedocs.org/projects/energy-analysis-toolbox'
repository = 'https://github.com/Eco-CO2/energy_analysis_toolbox'

[project.optional-dependencies]
doc = [
    "energy_analysis_toolbox[examples]",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "sphinx_design",
    "nbsphinx",
]
test = [
    "pytest",
    "pytest-cov",
]
all = [
    "energy_analysis_toolbox[test,doc]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["energy_analysis_toolbox"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "energy_analysis_toolbox.__version__"}

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = [
    "E402", # module-import-not-at-top-of-file
    "F401", # unused-import
]

[tool.pytest.ini_options]
addopts = "--cov=energy_analysis_toolbox --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "energy_analysis_toolbox/tests",
]
